# ankityping

./: CONFIG_ARCHITECTURE.md  README.md  arch.md  install.bat  install.sh  main.py  manifest.json  package.py  pyproject.toml  setup.py  uninstall.bat  uninstall.sh
src/ankityping/: __init__.py  anki_integration.py  config.json  config.py  meta.json
src/ankityping/core/: __init__.py  hint.py  stats.py  typing_engine.py
src/ankityping/ui/: __init__.py  config_dialog.py  typing_dialog.py
src/ankityping/ui/components/: __init__.py  settings_panel.py  typing_display.py
src/ankityping/utils/: __init__.py  deck_manager.py  field_processor.py  input_processor.py
